@@ -3,7 +3,7 @@
 <pkgmetadata>
 <herd>no-herd</herd>
 <maintainer>
-  <email>twp@gentoo.org</email>
-  <name>Tom Payne</name>
+  <email>exg@gentoo.org</email>
+  <name>Emanuele Giaquinta</name>
 </maintainer>
 </pkgmetadata>
