@@ -1,6 +1,9 @@
 # ChangeLog for dev-lang/toluapp
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/toluapp/Attic/ChangeLog,v 1.9 2006/04/27 15:57:47 marienz Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/toluapp/Attic/ChangeLog,v 1.10 2006/10/19 09:29:16 twp Exp $
+
+  19 Oct 2006; <twp@gentoo.org> metadata.xml:
+  Now maintained by exg.
 
   27 Apr 2006; Marien Zwart <marienz@gentoo.org> files/digest-toluapp-1.0.2,
   files/digest-toluapp-1.0.5_p1, Manifest:
