@@ -1,6 +1,9 @@
 # ChangeLog for dev-lang/tolua
-# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/tolua/Attic/ChangeLog,v 1.6 2005/10/31 18:13:08 twp Exp $
+# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/tolua/Attic/ChangeLog,v 1.7 2006/10/19 09:25:28 twp Exp $
+
+  19 Oct 2006; <twp@gentoo.org> metadata.xml:
+  Now maintained by exg.
 
 *tolua-5.0-r1 (31 Oct 2005)
 
